<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:id="@+id/drawer_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userInfo"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="About Us"/>

    <View
        android:id="@+id/seperation"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:background="@color/maroon"
        android:layout_below="@id/userInfo"
        android:layout_height="2dp"/>


        <ImageView
            android:layout_width="120dp"
            android:id="@+id/image1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/seperation"
            android:layout_height="120dp"/>


    <ImageView
        android:layout_width="120dp"
        android:id="@+id/image2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/image1"
        android:layout_height="120dp"/>


    <ImageView
        android:layout_width="120dp"
        android:id="@+id/image3"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/image1"
        android:layout_height="120dp"/>

<TextView
    android:id="@+id/text1"
    android:layout_below="@+id/image3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:textColor="@color/black"
    android:textSize="15sp"
    android:textStyle="bold"
    android:fontFamily="@font/century_gothic"
    android:justificationMode="inter_word"
    android:text="@string/welcome"/>

    <TextView
        android:id="@+id/text2"
        android:layout_below="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/century_gothic"
        android:justificationMode="inter_word"
        android:text="@string/welcome2"/>

    <TextView
        android:id="@+id/vision"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="Vision"/>

    <View
        android:id="@+id/seperation2"
        android:layout_centerHorizontal="true"
        android:layout_width="50dp"
        android:background="@color/maroon"
        android:layout_below="@id/vision"
        android:layout_height="2dp"/>

    <TextView
        android:id="@+id/text3"
        android:layout_below="@+id/seperation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/century_gothic"
        android:justificationMode="inter_word"
        android:text="@string/vision"/>


    <TextView
        android:id="@+id/researcher"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="The Researchers"/>

    <View
        android:id="@+id/seperation3"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:background="@color/maroon"
        android:layout_below="@id/researcher"
        android:layout_height="2dp"/>


    <TextView
        android:id="@+id/tristan"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seperation3"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:text="@string/tristan"/>


    <TextView
        android:id="@+id/Mary"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tristan"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:text="@string/mary"/>


    <TextView
        android:id="@+id/Rain"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Mary"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:text="@string/Rain"/>

    <TextView
        android:id="@+id/Andrea"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Rain"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:text="@string/Andrea"/>

    <TextView
        android:id="@+id/Gerard"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Andrea"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/century_gothic"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:text="@string/Gerard"/>


</RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header2"
        app:menu="@menu/admin"
        android:background="@color/semiWhite"
        android:id="@+id/nav_view"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>